crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__build_rich_git_reference_source_code.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: "artifact_info[0].filename"
---
STree(
    STreeFilename {
        distribution: PackageName {
            source: "rich",
            normalized: "rich",
        },
        version: "13.7.0",
        url: Url {
            scheme: "git+https",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Domain(
                    "github.com",
                ),
            ),
            port: None,
            path: "/Textualize/rich.git@v13.7.0",
            query: None,
            fragment: None,
        },
    },
)
