crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__build_rich_git_reference_with_tag_source_code.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: wheel_metadata.1
---
WheelCoreMetadata {
    name: PackageName {
        source: "rich",
        normalized: "rich",
    },
    version: "1.0.0",
    metadata_version: MetadataVersion(
        "2.4",
    ),
    requires_dist: [
        Requirement {
            name: PackageName(
                "colorama",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "0.4.3",
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: "0.5.0",
                            },
                        ],
                    ),
                ),
            ),
            marker: true,
            origin: None,
        },
        Requirement {
            name: PackageName(
                "commonmark",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "0.9.0",
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: "0.10.0",
                            },
                        ],
                    ),
                ),
            ),
            marker: true,
            origin: None,
        },
        Requirement {
            name: PackageName(
                "dataclasses",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "0.7",
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: "0.8",
                            },
                        ],
                    ),
                ),
            ),
            marker: python_full_version == '3.6.*',
            origin: None,
        },
        Requirement {
            name: PackageName(
                "pprintpp",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "0.4.0",
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: "0.5.0",
                            },
                        ],
                    ),
                ),
            ),
            marker: true,
            origin: None,
        },
        Requirement {
            name: PackageName(
                "pygments",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "2.6.1",
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: "3.0.0",
                            },
                        ],
                    ),
                ),
            ),
            marker: true,
            origin: None,
        },
        Requirement {
            name: PackageName(
                "typing-extensions",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "3.7.4",
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: "4.0.0",
                            },
                        ],
                    ),
                ),
            ),
            marker: true,
            origin: None,
        },
    ],
    requires_python: Some(
        VersionSpecifiers(
            [
                VersionSpecifier {
                    operator: GreaterThanEqual,
                    version: "3.6",
                },
                VersionSpecifier {
                    operator: LessThan,
                    version: "4.0",
                },
            ],
        ),
    ),
    extras: {},
}
