crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__build_rich_sdist_as_source_dependency.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: "artifact_info[0].filename"
---
SDist(
    SDistFilename {
        distribution: PackageName {
            source: "rich",
            normalized: "rich",
        },
        version: "13.6.0",
        format: TarGz,
    },
)
