crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__build_wheel_and_with_clean_env_and_pass_env_variables.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: metadata
---
WheelCoreMetadata {
    name: PackageName {
        source: "env_package",
        normalized: "env-package",
    },
    version: "0.1",
    metadata_version: MetadataVersion(
        "2.4",
    ),
    requires_dist: [],
    requires_python: None,
    extras: {},
}
